--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ blog sectio end
     <!-- happy client section start -->
     <section>
         <div class="container inner_client">
-            <h2>Happy Client</h2>
+            <h2 style="padding-bottom: 20px;">Happy Client</h2>
             <div class="client-section">
                 <!-- <div class="first_client"> -->
                 <div class="client_box">
